# UI-DESKTOP

./: .gitignore  AGENT.md  AGENT_FRONTEND.md  Docs.md  Plan_r3.md  Plan_r4.md  README.md  SPEC.md  jest.config.js  next.config.ts  package-lock.json  package.json  plan_r1.md  rust-toolchain.toml
.github/workflows/: build.yml  release.yml
scripts/: test-codegen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ThemeProvider.tsx
src/components/editor/: BackupModal.tsx  Canvas.tsx  ClipboardToast.tsx  DeployModal.tsx  EditorArea.tsx  EditorLoader.tsx  ExportModal.tsx  HistoryDropdown.tsx  HistoryTimeline.tsx  Inspector.tsx  KeyboardShortcuts.tsx  LayerTree.tsx  LeftPanel.tsx  LiveCodePanel.tsx  Palette.tsx  PreviewModal.tsx  ProjectManagerModal.tsx  StylePanel.tsx  TopBar.tsx  index.ts
src/components/editor/nodes/: AlertNode.tsx  AvatarNode.tsx  BadgeNode.tsx  (+17 more)
src/components/ui/: StyleInput.tsx  Tooltip.tsx  card.tsx
src/hooks/: useAutoSave.ts  useClipboard.ts  useDexieDB.ts  useHistoryTracker.ts  useProjectName.ts  useSmartGuides.ts  useUpdateChecker.ts
src/hooks/__tests__/: useClipboard.test.tsx  useDexieDB.test.tsx  useProjectName.test.tsx  useSmartGuides.test.tsx
src/lib/: codeGenerator.ts  db-backup.ts  db.ts  dexie-db.ts  editorResolvers.ts  projectManager.ts
src/lib/designSystems/: adapter.tsx  antd.tsx  carbon.tsx  chakra.tsx  loader.ts  registry.ts  settingsRegistry.ts  shadcn.tsx  types.ts
(+20 files in other folders)
