[package]
name = "proyect-ui"
version = "0.1.0"
description = "Visual drag-and-drop UI editor with multiple Design Systems"
authors = ["Proyect-UI"]
edition = "2021"

[lib]
name = "proyect_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
